# analysis_of_deputies

./: Cargo.toml  output.json  plan.excalidraw
src/: main.rs
