[package]
name = "data_analises"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.19.0"
tokio = { version = "1", features = ["full"] }
reqwest = "0.12.4"
serde = { version = "1.0.202", features = ["derive"]}
anyhow = "1.0.84"
serde_json = "1.0"
chrono = "0.4.38"